[package]
name = "rs_OrbitalEphemerisMessages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.22"
error-chain = "0.12.4"
tempfile = "3.8.1"
tokio = { version = "1.34.0", features = ["full"] }
