[package]
name = "OrbitalEphemerisMessage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.24"
error-chain = "0.12.4"
tempfile = "3.10.1"
tokio = { version = "1.36.0", features = ["full"] }
chrono = "0.4.34"
polars = "0.35.4"
